企業會員圖片(剛剛遺漏一張)，以及更新一些css內容

--- a/src/main/webapp/owneruser/CSS/style.css
+++ b/src/main/webapp/owneruser/CSS/style.css
@@ -38,6 +38,7 @@ header {
     position: sticky;
     top: 0;
     width: 100%;
+    z-index: 3;
 }
 
 header nav img {
@@ -267,21 +268,4 @@ body{
 }
 
 
-/* =============行事曆區============ */
 
-
-.cal{
-    width: 800px;
-    height: 800px;
-    background: white;
-    display: flex;
-    position: relative;
-    justify-content: center;
-    left: 350px;
-}
-#calendar{
-    width: 800px;
-    height: 800px;
-    display: flex;
-    position: relative;
-}
