更新:一般會員jsp/servlet/css 新增:預約servlet(未完成)

--- a/src/main/webapp/generaluser/css2/guser.css
+++ b/src/main/webapp/generaluser/css2/guser.css
@@ -18,6 +18,7 @@ aside.aside a.asidearea:hover{
     color: #FF9F1B;
 }
 
+
 /* input 設定 */
 input{
     width: 213px;
@@ -65,10 +66,34 @@ input#gTelephone{
     position: relative;
     left: 20px;
 }
-input#gAddress{
+input#gAddress1{
     position: relative;
     left: 20px;
     width: 300px;
 }
+
+input#gAddress{
+    position: relative;
+    left: 92px;
+    width: 300px;
+}
+
+select#city{
+    position: relative;
+    left: 20px;
+    width: 213px;
+    height: 30px;
+    margin-bottom: 10px;
+}
+
+select#area{
+    position: relative;
+    left: 92px;
+    width: 213px;
+    height: 30px; 
+    margin-bottom: 10px;
+}
+
+
 
 
