--- a/src/main/webapp/owneruser/CSS/index3.css
+++ b/src/main/webapp/owneruser/CSS/index3.css
@@ -161,6 +161,10 @@ main.main {
 main.main div.col-md-5 {
   width: 400px;
 }
+main.main div.col-1 {
+  width: 100px;
+  height: 100px;
+}
 
 /*=== 送出按鈕 ===*/
 input[type="button"] {
