--- a/src/main/webapp/generaluser/css2/css.css
+++ b/src/main/webapp/generaluser/css2/css.css
@@ -135,8 +135,8 @@ aside.aside a.asidearea:hover{
 aside.aside button.asidearea{
   font-size: 16px;
   color:#207DCA;
-  margin: 0 0 0 12px;
-  text-decoration:none;
+  background-color: #F7F7F7;
+  margin: 0 0 0 8px;
   border: 0px;
 }
 aside.aside button.asidearea:hover{
