--- a/src/main/webapp/generaluser/css2/main.css
+++ b/src/main/webapp/generaluser/css2/main.css
@@ -36,7 +36,7 @@ main.main div#carouselExampleInterval{
 }
 /* 最新消息(外框) */
 div.news{
-    border: 1px solid grey;
+    border: 1px solid rgb(200, 200, 200);
     background: #DAE4F4;
     border-radius: 8px;
     margin-top: 100px;
