--- a/src/main/webapp/generaluser/css2/css.css
+++ b/src/main/webapp/generaluser/css2/css.css
@@ -90,11 +90,12 @@ body.p-3{
 /*======================= aside 區域 ============================*/
 aside.aside{
     width: 350px;
+    margin-top:30px;
     display: inline-block;
     vertical-align: top;
     font-size: 1rem;
     margin-right: 10px;
-    /* border: 1px solid green; */
+/*     border: 1px solid green; */
 }
 @media (max-width: 575.98px){
   div.main_content{
@@ -128,6 +129,7 @@ aside.aside a.asidearea{
   color:#207DCA;
   margin: 0 0 0 12px;
   text-decoration:none;
+  
 }
 aside.aside a.asidearea:hover{
   color: #FF9F1B;
@@ -158,10 +160,11 @@ aside.aside div.parent_container{
 /*======================= main 區域 ============================*/
 main.main{
     width: calc(100% - 350px - 10px);
+    margin-top:30px;
     display: inline-block;
     vertical-align: top;
     font-size: 1rem;
-    /* border: 1px solid blue; */
+/*     border: 1px solid blue; */
     box-sizing: border-box;
 }
 
