一些圖片、聯絡我們、一般會員

--- a/src/main/webapp/generaluser/css2/main.css
+++ b/src/main/webapp/generaluser/css2/main.css
@@ -1,3 +1,10 @@
+/* ====================== header 區 ====================== */
+li#head{
+	margin-top:2px;
+}
+li#head1{
+	margin-top:7px;
+}
 /* ====================== aside 區 ====================== */
 
 /* 側邊欄 */
