更新:預約訂單

--- a/src/main/webapp/generaluser/css2/reserve.css
+++ b/src/main/webapp/generaluser/css2/reserve.css
@@ -167,6 +167,9 @@ tr#courtName{
     position: relative;
     top: 50px;
 }
+td#courtname{
+	width:200px;
+}
 tr#placeName{
     position: relative;
     top: 60px;
