--- a/src/main/webapp/ginquirycourt/coutinfo_list.css
+++ b/src/main/webapp/ginquirycourt/coutinfo_list.css
@@ -2,66 +2,66 @@
     box-sizing: border-box;
     font-family: "Noto Sans CJK TC", "Microsoft JhengHei", PingFang, STHeiti, sans-serif, serif;
 }
-body{
-    margin: 0;
-    padding: 0;
-    background: #F7F7F7;
-    overflow: visible;
-}
+/* body{ */
+/*     margin: 0; */
+/*     padding: 0; */
+/*     background: #F7F7F7; */
+/*     overflow: visible; */
+/* } */
 
 img{
     max-width: 100%;
 }
 /*======================= header 區域 ============================*/
-header.header{
-    /* border: 1px solid black; */
-    background-color: #207DCA;
-    position: sticky;
-    margin: 0 auto 10px auto;
-    top: 0;
-    overflow: visible;
-    z-index: 3;
-}
+/* header.header{ */
+/*     border: 1px solid black; */
+/*     background-color: #207DCA; */
+/*     position: sticky; */
+/*     margin: 0 auto 10px auto; */
+/*     top: 0; */
+/*     overflow: visible; */
+/*     z-index: 3; */
+/* } */
 
 
-@media all and (min-width: 576px) and (max-width: 767.98px){
-    header.header{
-        width: 540px;
-    }
-}
-@media (max-width: 575.98px){
-    header.header{
-        width: 100%;
-    }
-}
+/* @media all and (min-width: 576px) and (max-width: 767.98px){ */
+/*     header.header{ */
+/*         width: 540px; */
+/*     } */
+/* } */
+/* @media (max-width: 575.98px){ */
+/*     header.header{ */
+/*         width: 100%; */
+/*     } */
+/* } */
 
 
 /*=== header導覽列 ===*/
 
-.nav-link{
-  color: white;
-  margin: 15px;
-  font-weight: bold;
-}
+/* .nav-link{ */
+/*   color: white; */
+/*   margin: 15px; */
+/*   font-weight: bold; */
+/* } */
 
-ul.nav.nav-pills{
-  position: relative;
-  right: 30px;
-}
-#head{
-  position: relative;
-  top:8px;
-}
-#heads{
-  position: relative;
-  top:5px;
-}
-/* header大頭貼剪裁成圓形 */
-img.rounded-circle{
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-}
+/* ul.nav.nav-pills{ */
+/*   position: relative; */
+/*   right: 30px; */
+/* } */
+/* #head{ */
+/*   position: relative; */
+/*   top:8px; */
+/* } */
+/* #heads{ */
+/*   position: relative; */
+/*   top:5px; */
+/* } */
+/* /* header大頭貼剪裁成圓形 */ */
+/* img.rounded-circle{ */
+/*   border-radius: 50%; */
+/*   width: 40px; */
+/*   height: 40px; */
+/* } */
 /*======================= body 區域 ============================*/
 div.main_content{
     margin: 0 auto;
@@ -171,28 +171,28 @@ main.main{
     }
 }  
 
-/* 日期 */
-span.reservedate{
-    position: relative;
-    left: 100px;
-    top: 110px;
-}
+/* /* 日期 */ */
+/* span.reservedate{ */
+/*     position: relative; */
+/*     left: 100px; */
+/*     top: 110px; */
+/* } */
 
-input#date{
-    padding: 1px 5px 0 35px;
-}
+/* input#date{ */
+/*     padding: 1px 5px 0 35px; */
+/* } */
 
-/* 球類 */
-div.balls{
-    /* border: 1px solid orange; */
-    width: 400px;
-    height: 300px;
-    margin: 0;
-    padding: 0;
-    position: relative;
-    left: 100px;
-    top: 120px;
-}
+/* /* 球類 */ */
+/* div.balls{ */
+/*     border: 1px solid orange; */
+/*     width: 400px; */
+/*     height: 300px; */
+/*     margin: 0; */
+/*     padding: 0; */
+/*     position: relative; */
+/*     left: 100px; */
+/*     top: 120px; */
+/* } */
 button.nav-link{
     /* border: 5px solid black; */
     color: #207DCA;
@@ -200,23 +200,23 @@ button.nav-link{
     
 }
 
-div.tab-pane.fade{
-    border: 1px solid #E7E7E7;
-    border-top: 0;
-    border-radius: 5px;
-    color: black;
-    background: #fff;
-    height: 600px;
+/* div.tab-pane.fade{ */
+/*     border: 1px solid #E7E7E7; */
+/*     border-top: 0; */
+/*     border-radius: 5px; */
+/*     color: black; */
+/*     background: #fff; */
+/*     height: 600px; */
 
-}
-/* 整串時段 */
-div.texts{
-    padding: 10px 20px 10px 20px;
-}
-p.line{
-    color: #E7E7E7;
-    margin: 15px 0 0 0;
-}
+/* } */
+/* /* 整串時段 */ */
+/* div.texts{ */
+/*     padding: 10px 20px 10px 20px; */
+/* } */
+/* p.line{ */
+/*     color: #E7E7E7; */
+/*     margin: 15px 0 0 0; */
+/* } */
 span.text{
     position: relative;
     top: 10px;
